# sample-from-prototype-to-production-agentic-ai-evaluation-and-observability-with-aws

./: .gitignore  CLAUDE.md  E2E_README.md  E2E_REPORT.md  EVALUATION_FIXES_SUMMARY.md  GITLAB_SETUP.md  QUICK_START.md  README.md  TASKS.md  WORKSHOP_VALIDATION_COMPLETE.md  e2e_test.py  main.py  pyproject.toml  validate_notebooks.py
.claude/: evaluation-workshop-spec.md
00-prerequisites/: 0-environment-setup.ipynb  requirements.txt  setup_infrastructure.py  verify_infrastructure.py
01-multi-agent-prototype/: 01-multi-agent-prototype.ipynb  test_notebook_fixes.py
01-single-agent-prototype/: 01-single-agent-prototype.ipynb  utils.py
02-evaluation-baseline/: 02-evaluation-baseline.ipynb  02a-deepeval-evaluation.ipynb  02a-strands-evaluation.ipynb  02b(optional)-deepeval-evaluation.ipynb  02b-strands-evaluation.ipynb  VALIDATION_SUMMARY.md  __init__.py  custom_evaluators.py  evaluation_dataset.json  test_evaluation_fixes.py
03-production-deployment/: 03-production-deployment.ipynb  app.py  utils.py
03-production-deployment-with-failure-cases/: 03-production-deployment-with-failure-cases.ipynb  FAILURECASES.md  README.md  deployment_config.py  utils.py
04-online-eval-improvement/: 04-online-eval-improvement.ipynb  drift_scenarios.json  improved_prompts.py
04-online-eval-observability/: 04-agentcore-evaluations.ipynb  04-agentcore-observability.ipynb  04a-agentcore-observability.ipynb  04b-agentcore-evaluations.ipynb
05-production-batch-evaluation/: 05-production-batch-evaluation.ipynb  05a-production-batch-evaluation.ipynb  custom_evaluators.py
06-production-evaluation-patterns/: README.md
07-production-lifecycle/: README.md
08-rag-evaluation/: README.md
cleanup/: README.md  cleanup.py
scripts/: compare_baseline.py  (+2 more)
(+63 files in other folders)
