[project]
name = "ecommerce-agent-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aws-opentelemetry-distro>=0.1.0",
    "bedrock-agentcore>=0.1.0",
    "bedrock-agentcore-starter-toolkit>=0.1.0",
    "boto3>=1.35.0",
    "deepeval>=3.8.8",
    "ipywidgets>=8.0.0",
    "jupyter>=1.0.0",
    "mcp>=1.26.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "retrying>=1.3.4",
    "strands-agents>=0.1.0",
    "strands-agents-evals>=0.1.0",
    "strands-agents-tools>=0.2.0",
    "matplotlib>=3.7.0",
    "scipy>=1.10.0",
    "uuid>=1.30",
]
